@@ -42,13 +42,13 @@ use File::Spec;
 use Carp;
 use Data::Dumper;
 
-'$Revision: 1.14 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
+'$Revision: 1.15 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
 
 # C O N S T R U C T O R ----------------------------------------------------
 
 =head1 REVISION
 
-$Id: VOEvent.pm,v 1.14 2006/03/21 09:32:09 voevent Exp $
+$Id: VOEvent.pm,v 1.15 2006/03/21 09:41:01 voevent Exp $
 
 =head1 METHODS
 
@@ -340,8 +340,7 @@ sub build {
    
   # WHERE & WHEN  
   if ( exists $args{UseSTC} ) {
-      $self->{WRITER}->startTag( 'WhereWhen', 
-                                 'type' => 'stc', );
+      $self->{WRITER}->startTag( 'WhereWhen' );
       $self->{WRITER}->startTag( 'stc:ObservationLocation' );
       $self->{WRITER}->startTag( 'crd:AstroCoords',
         		      'coord_system_id' => 'FK5-UTC' );
