@@ -3,7 +3,8 @@
        * VOEvent.pm: Fixed <WhereWhen type="simple"> representation to
          account for lack of error in the RA and Dec positions. Updated
          the <Why> to be compliant with VOEvent v1.1 standard. Updated the
-         standard version tags to 1.1x and HTN/0.2 repsectively.
+         standard version tags to 1.1x and HTN/0.2 repsectively. Removed
+         <WhereWhen type="stc"> tag to make the messages validate!
          
 2005-12-28  Alasdair Allan <aa@astro.ex.ac.uk>
 
